<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_background">


    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/app_background"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        />-->


    <!--<ImageView
        android:id="@+id/feedbacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"/>-->


    <ImageView
        android:id="@+id/feedback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:src="@mipmap/warning" />

    <LinearLayout
        android:id="@+id/bottomMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <include
            android:id="@+id/layer_marquee"
            layout="@layout/layer_runningtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomMark"
        android:orientation="vertical">

        <!--android:layout_marginBottom="10dp"-->


        <LinearLayout
            android:id="@+id/chat_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/messagetwo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/Chat_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/get_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/warnings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/get_help"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/call_the_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/phone_color"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/search_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/find_your_issue"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/listen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/listen_color"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/listen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/dawson_online"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/get_encouraged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/get_encourged_color"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/praying" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/theprayershow"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <!--  <LinearLayout
              android:id="@+id/follow"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:background="@color/twitter_blue"
              android:padding="4dp">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="50dp"
                  android:padding="5dp"
                  android:src="@mipmap/follow"
                  android:scaleType="centerInside"/>

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:textAllCaps="true"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_gravity="center_vertical"
                  android:gravity="right"
                  android:text="@string/follow" />

          </LinearLayout>-->

    </LinearLayout>


</RelativeLayout>